--- a/source/less/gallery.less
+++ b/source/less/gallery.less
@@ -1,5 +1,5 @@
 //
-// I dream in colour 
+// I dream in colour
 // layout and design
 // ===============================
 
@@ -30,13 +30,13 @@
 		li {
 			margin: 20px 0 ;
 			max-width: 1000px;
-			display: flex;
+			//display: flex;
 			position: relative;
 		}
 
 		li.collapse {
 			@media (min-width: @screen-sm-min) {
-				margin: -40px 0 ; 
+				margin: -40px 0 ;
 			}
 			z-index: 100;
 		}
@@ -59,7 +59,7 @@
 // ---------------------------------
 
 .link-banner {
-	
+
 	margin: 0 auto;
 
 		a {
@@ -199,7 +199,7 @@
 }
 
 .next-project {
-	
+
 	float: right;
 	background: rgba(255, 255, 255, 0.25) url('img/arrow-right.png') no-repeat right 30px center;
 
@@ -208,7 +208,7 @@
 	}
 
 	@media (min-width: @screen-sm-min) {
-	
+
 	float: none;
 	right: 0;
 
